[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = ["Faiz"]
readme = "README.md"
packages = [{include = "ice_cream_dataops"}]

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "0.5.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
